--- a/res/drawable/edit_text_selector.xml
+++ b/res/drawable/edit_text_selector.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:drawable="@drawable/editbox_background_normal" android:state_enabled="true" android:state_window_focused="false"/>
-    <item android:drawable="@drawable/editbox_background_normal" android:state_enabled="false" android:state_window_focused="false"/>
-    <item android:drawable="@drawable/editbox_background_focused" android:state_activated="true" android:state_enabled="true"/>
-    <item android:drawable="@drawable/editbox_background_normal" android:state_enabled="true"/>
-    <item android:drawable="@drawable/editbox_background_focused" android:state_focused="true"/>
-    <item android:drawable="@drawable/editbox_background_normal"/>
-
+    <item android:state_enabled="false" android:state_focused="true" android:state_window_focused="true" android:drawable="@drawable/editbox_background_focused"/>
+    <item android:state_enabled="false" android:drawable="@drawable/editbox_background_normal" />
+    <item android:state_pressed="true" android:drawable="@drawable/editbox_background_activated" />
+    <item android:state_focused="true" android:state_window_focused="true" android:drawable="@drawable/editbox_background_focused" />
+    <item android:drawable="@drawable/editbox_background_normal" />
 </selector>
+
