1. Added fastScroll OutsideInset. 2. Added All Contacts GridView style. 3. Added Refresh Contacts on ContentObserver (Handle everytime any changes happens to even Call Logs). 4. Added Call Logs.

--- a/res/layout/fragment_all_contacts.xml
+++ b/res/layout/fragment_all_contacts.xml
@@ -53,11 +53,12 @@
             android:layout_height="match_parent"
             android:drawSelectorOnTop="true"
             android:fastScrollEnabled="true"
-            android:horizontalSpacing="3dp"
+            android:horizontalSpacing="1dp"
             android:listSelector="@drawable/list_item_selected"
+            android:scrollbarStyle="outsideInset"
             android:numColumns="auto_fit"
             android:stretchMode="columnWidth"
-            android:verticalSpacing="3dp" />
+            android:verticalSpacing="1dp" />
     </LinearLayout>
     <!-- </uk.co.senab.actionbarpulltorefresh.extras.actionbarsherlock.PullToRefreshLayout> -->
 
