--- a/res/layout/grd_item_contact.xml
+++ b/res/layout/grd_item_contact.xml
@@ -1,19 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content"
+    android:background="@drawable/dialog_background"
+    android:orientation="vertical" >
 
-    <com.netdoers.zname.utils.SquareImageView
-        android:id="@+id/grid_item_display_picture"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitCenter" />
-    
+        android:layout_height="match_parent" >
+
+        <com.netdoers.zname.utils.SquareImageView
+            android:id="@+id/grid_item_display_picture"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/face_stamp"
+            android:scaleType="fitCenter" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            android:background="@color/transparent"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/grid_item_call"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center"
+                android:layout_marginRight="3dp"
+                android:layout_marginTop="5dp"
+                android:src="@android:drawable/sym_action_call" />
+
+            <ImageView
+                android:id="@+id/grid_item_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="5dp"
+                android:src="@android:drawable/sym_action_chat" />
+        </LinearLayout>
+    </FrameLayout>
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="#55000000"
+        android:background="@android:color/white"
         android:orientation="vertical" >
 
         <TextView
@@ -22,11 +56,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_weight="0.5"
-            android:background="#55000000"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="5dp"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/darker_gray"
             android:textSize="18sp" />
 
         <TextView
@@ -35,11 +68,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_weight="0.5"
-            android:background="#55000000"
             android:paddingBottom="5dp"
-            android:paddingLeft="30dp"
-            android:textColor="@android:color/white"
-            android:textSize="10sp" />
+            android:paddingLeft="20dp"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="14sp" />
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
