--- a/res/layout/drawer_list_item.xml
+++ b/res/layout/drawer_list_item.xml
@@ -16,19 +16,19 @@
 -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_item_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal" >
-    
-    <ImageView 
+
+    <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="7dp"
-        android:scaleType="centerInside"
         android:layout_gravity="center_vertical"
-        />
+        android:paddingLeft="7dp"
+        android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/text1"
