1 + Added 'Add' contacts to Family Fragment. 2 + Added 'Add' contacts to Work Fragment.

--- a/res/menu/all_contacts_menu.xml
+++ b/res/menu/all_contacts_menu.xml
@@ -6,7 +6,7 @@
     <item
         android:id="@+id/action_search"
         android:orderInCategory="100"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/zname_ic_menu_search_selector"
         android:showAsAction="always"
         />
 
