--- a/res/layout/fragment_call_logs.xml
+++ b/res/layout/fragment_call_logs.xml
@@ -37,7 +37,7 @@
             android:layout_gravity="center"
             android:padding="5dp"
             android:scaleType="fitCenter"
-            android:src="@android:drawable/sym_action_call" />
+            android:src="@drawable/btn_ic_call_selector" />
 
         <View
             android:layout_width="match_parent"
@@ -53,7 +53,7 @@
             android:layout_gravity="center"
             android:padding="5dp"
             android:scaleType="fitCenter"
-            android:src="@android:drawable/sym_call_incoming" />
+            android:src="@drawable/btn_ic_incoming_selector" />
 
         <View
             android:layout_width="match_parent"
@@ -69,7 +69,7 @@
             android:layout_gravity="center"
             android:padding="5dp"
             android:scaleType="fitCenter"
-            android:src="@android:drawable/sym_call_outgoing" />
+            android:src="@drawable/btn_ic_outgoing_selector" />
 
         <View
             android:layout_width="match_parent"
@@ -85,7 +85,7 @@
             android:layout_gravity="center"
             android:padding="5dp"
             android:scaleType="fitCenter"
-            android:src="@android:drawable/sym_call_missed" />
+            android:src="@drawable/btn_ic_missed_selector" />
 
         <View
             android:layout_width="match_parent"
