--- a/res/layout/fragment_call_logs.xml
+++ b/res/layout/fragment_call_logs.xml
@@ -101,7 +101,7 @@
             android:layout_gravity="center"
             android:padding="5dp"
             android:scaleType="fitCenter"
-            android:src="@android:drawable/ic_menu_month" />
+            android:src="@drawable/ic_menu_calendar" />
     </LinearLayout>
 
 </FrameLayout>
