--- a/res/layout/intro_layout.xml
+++ b/res/layout/intro_layout.xml
@@ -1,12 +1,12 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="@drawable/splash_bg"
     android:fillViewport="true" >
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fafafa" >
+        android:layout_height="wrap_content" >
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -34,6 +34,7 @@
             android:layout_height="fill_parent" />
 
         <TextView
+            android:id="@+id/intro_txtview_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
@@ -44,24 +45,60 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:text="Z:name"
-            android:textColor="#ffca00"
+            android:textColor="@android:color/white"
             android:textSize="22sp" />
 
         <TextView
-            android:id="@+id/start_messaging_button"
+            android:id="@+id/intro_txtview_swipe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/zname_btn_default_holo_light"
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="70dp"
+            android:background="@color/background_action_bar_orange"
             android:gravity="center"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
-            android:text="Sign Up"
-            android:textColor="#ffffff"
-            android:textSize="22sp" />
+            android:padding="5dp"
+            android:text="Swipe"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:background="@color/background_action_bar_orange"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/intro_txtview_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Sign Up"
+                android:textColor="#ffffff"
+                android:textSize="22sp" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="7dp"
+                android:layout_marginTop="7dp"
+                android:background="@android:color/white" />
+
+            <TextView
+                android:id="@+id/intro_txtview_signin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Sign In"
+                android:textColor="#ffffff"
+                android:textSize="22sp" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/bottom_pages"
