--- a/res/layout/intro_view_layout.xml
+++ b/res/layout/intro_view_layout.xml
@@ -5,24 +5,24 @@
 
     <TextView android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:id="@+id/header_text"
-        android:textSize="26dp"
+        android:id="@+id/intro_header_text"
+        android:textSize="26sp"
         android:gravity="center"
         android:layout_gravity="top|left"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="16dp"
-        android:textColor="#ff000000"
+        android:textColor="@android:color/white"
         android:layout_marginTop="156dp"/>
 
     <TextView android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:id="@+id/message_text"
-        android:textSize="15dp"
+        android:id="@+id/intro_message_text"
+        android:textSize="15sp"
         android:gravity="center"
         android:layout_gravity="top|left"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="200dp"
-        android:textColor="#808080"/>
+        android:textColor="@android:color/white"/>
 
 </FrameLayout>
