--- a/res/layout/sign_up_layout.xml
+++ b/res/layout/sign_up_layout.xml
@@ -44,7 +44,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:background="@drawable/edit_text_selector"
+                        android:background="@drawable/zname_edit_text_holo_light"
                         android:hint="Full Name"
                         android:gravity="left|center"
                         android:inputType="text"
@@ -68,7 +68,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:background="@drawable/edit_text_selector"
+                        android:background="@drawable/zname_edit_text_holo_light"
                         android:hint="Book your : Zname"
                         android:inputType="text"
                         android:gravity="left|center"
@@ -92,7 +92,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:background="@drawable/edit_text_selector"
+                        android:background="@drawable/zname_edit_text_holo_light"
                         android:hint="Contact Number"
                         android:gravity="left|center"
                         android:inputType="number"
@@ -132,6 +132,16 @@
                     android:textColor="#ffffff"
                     android:textSize="22sp" />
             </LinearLayout>
+            
+            <TextView
+                    android:id="@+id/sign_up_txt_agree" 
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="10dp"                
+                	android:textSize="16sp"
+                	android:layout_gravity="center_horizontal"
+                	android:gravity="center"
+                />
         </LinearLayout>
     </ScrollView>
 
