--- a/res/values/tags.xml
+++ b/res/values/tags.xml
@@ -3,9 +3,12 @@
     <item name="TAG_CONTACT_NUMBER" type="id"/>
     <item name="TAG_CONTACT_DP" type="id"/>
     <item name="TAG_CONTACT_NAME" type="id"/>
+    <item name="TAG_CONTACT_ID" type="id"/>
+    <item name="TAG_CONTACT_PHOTO_ID" type="id"/>
     <item name="TAG_PDT_ID" type="id"/>
     <item name="TAG_PDT_NAME" type="id"/>
     <item name="TAG_PDT_V_ID" type="id"/>
     <item name="TAG_CALL_LOG_DATE" type="id"/>
     <item name="TAG_CALL_LOG_POSITION" type="id"/>
 </resources>
+
