--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- File created by the Android Action Bar Style Generator
+<!--
+     File created by the Android Action Bar Style Generator
 
      Copyright (C) 2011 The Android Open Source Project
      Copyright (C) 2012 readyState Software Ltd
@@ -29,8 +30,9 @@
         <item name="actionModeBackground">@drawable/cab_background_top_zname</item>
         <item name="actionModeSplitBackground">@drawable/cab_background_bottom_zname</item>
         <item name="actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Zname</item>
-		<item name="actionBarSize">40dip</item>
-		<item name="autoScaleTextViewStyle">@style/autoScaleTextView</item>
+        <item name="actionBarSize">40dip</item>
+        <item name="autoScaleTextViewStyle">@style/autoScaleTextView</item>
+        <item name="actionBarWidgetTheme">@style/Overflow.Text.Color</item>
     </style>
 
     <style name="ActionBar.Solid.Zname" parent="@style/Widget.Sherlock.Light.ActionBar.Solid">
@@ -45,16 +47,16 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">20sp</item>
     </style>
-    
+
     <style name="ActionBar.Transparent.Zname" parent="@style/Widget.Sherlock.Light.ActionBar">
         <item name="background">@drawable/ab_transparent_zname</item>
         <item name="progressBarStyle">@style/ProgressBar.Zname</item>
     </style>
-	
-    <style name="PopupMenu.Zname" parent="@style/Widget.Sherlock.Light.ListPopupWindow">	
+
+    <style name="PopupMenu.Zname" parent="@style/Widget.Sherlock.Light.ListPopupWindow">
         <item name="android:popupBackground">@drawable/menu_dropdown_panel_zname</item>
     </style>
-	
+
     <style name="DropDownListView.Zname" parent="@style/Widget.Sherlock.Light.ListView.DropDown">
         <item name="android:listSelector">@drawable/selectable_background_zname</item>
     </style>
@@ -62,36 +64,42 @@
     <style name="ActionBarTabStyle.Zname" parent="@style/Widget.Sherlock.Light.ActionBar.TabView">
         <item name="android:background">@drawable/tab_indicator_ab_zname</item>
     </style>
-	
+
     <style name="DropDownNav.Zname" parent="@style/Widget.Sherlock.Light.Spinner.DropDown.ActionBar">
         <item name="android:background">@drawable/spinner_background_ab_zname</item>
         <item name="android:popupBackground">@drawable/menu_dropdown_panel_zname</item>
         <item name="android:dropDownSelector">@drawable/selectable_background_zname</item>
     </style>
-    
+
     <style name="ProgressBar.Zname" parent="@style/Widget.Sherlock.Light.ProgressBar.Horizontal">
         <item name="android:progressDrawable">@drawable/progress_horizontal_zname</item>
     </style>
-    
+
     <style name="ActionButton.CloseMode.Zname" parent="@style/Widget.Sherlock.Light.ActionButton.CloseMode">
         <item name="android:background">@drawable/btn_cab_done_zname</item>
     </style>
-    
+
     <!-- this style is only referenced in a Light.DarkActionBar based theme -->
     <style name="Theme.Zname.Widget" parent="@style/Theme.Sherlock">
         <item name="popupMenuStyle">@style/PopupMenu.Zname</item>
         <item name="dropDownListViewStyle">@style/DropDownListView.Zname</item>
     </style>
-    
+
     <style name="EditTextStyle" parent="android:style/Widget.EditText">
         <item name="android:background">@drawable/edit_text_selector</item>
         <item name="android:textColor">#333333</item>
         <item name="android:padding">10dp</item>
         <item name="android:textColorPrimaryInverse">#000000</item>
     </style>
-    
+
     <style name="autoScaleTextView">
- 	<!-- use the next line to alter the minimum text size (uncomment first)-->
+
+        <!-- use the next line to alter the minimum text size (uncomment first) -->
         <item name="@attr/minTextSize">10dp</item>
     </style>
+
+    <style name="Overflow.Text.Color" parent="Widget">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
 </resources>
