--- a/res/layout/activity_mother.xml
+++ b/res/layout/activity_mother.xml
@@ -3,10 +3,10 @@
     android:layout_width="fill_parent"
     android:layout_height="match_parent" >
 
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+<!--     <android.support.v4.widget.DrawerLayout -->
+<!--         android:id="@+id/drawer_layout" -->
+<!--         android:layout_width="match_parent" -->
+<!--         android:layout_height="match_parent" > -->
 
 <!--         <com.netdoers.zname.utils.PagerSlidingTabStrip -->
 <!-- 	    	android:id="@+id/pager_sliding_tab_strip" -->
@@ -24,28 +24,28 @@
          space available using match_parent in both dimensions.
         -->
 
-        <FrameLayout
-            android:id="@+id/content_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+<!--         <FrameLayout -->
+<!--             android:id="@+id/content_frame" -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="match_parent" /> -->
 
-        <!--
-         android:layout_gravity="start" tells DrawerLayout to treat
-         this as a sliding drawer on the left side for left-to-right
-         languages and on the right side for right-to-left languages.
-         The drawer is given a fixed width in dp and extends the full height of
-         the container. A solid background is used for contrast
-         with the content view.
-        -->
-        <ListView
-            android:id="@+id/left_drawer"
-            android:layout_width="240dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="#ffa500"
-            android:choiceMode="singleChoice"
-            android:divider="#FFFFFF"
-            android:dividerHeight="1dp" />
-    </android.support.v4.widget.DrawerLayout>
+        
+<!--          android:layout_gravity="start" tells DrawerLayout to treat -->
+<!--          this as a sliding drawer on the left side for left-to-right -->
+<!--          languages and on the right side for right-to-left languages. -->
+<!--          The drawer is given a fixed width in dp and extends the full height of -->
+<!--          the container. A solid background is used for contrast -->
+<!--          with the content view. -->
+<!--         -->
+<!--         <ListView -->
+<!--             android:id="@+id/left_drawer" -->
+<!--             android:layout_width="240dp" -->
+<!--             android:layout_height="match_parent" -->
+<!--             android:layout_gravity="start" -->
+<!--             android:background="#ffa500" -->
+<!--             android:choiceMode="singleChoice" -->
+<!--             android:divider="#FFFFFF" -->
+<!--             android:dividerHeight="1dp" /> -->
+<!--     </android.support.v4.widget.DrawerLayout> -->
 
 </RelativeLayout>
