--- a/res/layout/fragment_all_contacts.xml
+++ b/res/layout/fragment_all_contacts.xml
@@ -16,36 +16,37 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp" 
-        android:orientation="vertical"
-        >
+        android:layout_marginRight="3dp"
+        android:orientation="vertical" >
 
-        <LinearLayout
-            android:id="@+id/search_txt_layout"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:orientation="horizontal" >
+        <!-- <LinearLayout -->
+        <!-- android:id="@+id/search_txt_layout" -->
+        <!-- android:layout_width="fill_parent" -->
+        <!-- android:layout_height="wrap_content" -->
+        <!-- android:visibility="gone" -->
+        <!-- android:orientation="horizontal" > -->
 
-            <EditText
-                android:id="@+id/search_txt"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="9"
-                android:background="@drawable/zname_textfield_default_holo_light"
-                android:drawableLeft="@drawable/zname_ic_menu_add_selected"
-                android:inputType="textNoSuggestions"
-                android:singleLine="true" />
 
-            <ImageView
-                android:id="@+id/clear_srch_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:scaleType="fitCenter"
-                android:src="@drawable/abs__ic_clear_search_api_holo_light" />
-        </LinearLayout>
+        <!-- <EditText -->
+        <!-- android:id="@+id/search_txt" -->
+        <!-- android:layout_width="0dp" -->
+        <!-- android:layout_height="wrap_content" -->
+        <!-- android:layout_weight="9" -->
+        <!-- android:background="@drawable/zname_textfield_default_holo_light" -->
+        <!-- android:drawableLeft="@drawable/zname_ic_menu_add_selected" -->
+        <!-- android:inputType="textNoSuggestions" -->
+        <!-- android:singleLine="true" /> -->
+
+
+        <!-- <ImageView -->
+        <!-- android:id="@+id/clear_srch_button" -->
+        <!-- android:layout_width="0dp" -->
+        <!-- android:layout_height="wrap_content" -->
+        <!-- android:layout_gravity="center" -->
+        <!-- android:layout_weight="1" -->
+        <!-- android:scaleType="fitCenter" -->
+        <!-- android:src="@drawable/abs__ic_clear_search_api_holo_light" /> -->
+        <!-- </LinearLayout> -->
 
         <GridView
             android:id="@+id/gridview_all_contacts"
@@ -55,8 +56,8 @@
             android:fastScrollEnabled="true"
             android:horizontalSpacing="3dp"
             android:listSelector="@drawable/zname_list_selector_holo_light"
-            android:scrollbarStyle="outsideInset"
             android:numColumns="auto_fit"
+            android:scrollbarStyle="outsideInset"
             android:stretchMode="columnWidth"
             android:verticalSpacing="3dp" />
     </LinearLayout>
