1. + Added Zname Profile Activity. 2. + Added Back pressed in respectivity Activity. 3. + Added multiple contact number in Contacts, Friends, Family, Work. 4. + Added multiple contact in Contact Picker. 5. + Added Profile : Not in Zname User w.r.t to each fields of Numbers

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -102,4 +102,10 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <style name="TextViewStyleHeaderButtonBlue">
+        <item name="android:textSize">13dip</item>
+        <item name="android:textColor">#EEFFFFFF</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
