--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -72,4 +72,10 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <style name="TextViewStyleHeaderButtonBlue">
+        <item name="android:textSize">13dip</item>
+        <item name="android:textColor">#EEFFFFFF</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
