--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,5 +3,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="dim_txt_head">18sp</dimen>
+    <dimen name="dim_btn">16sp</dimen>
 
 </resources>
