--- a/res/layout/grd_item_contact.xml
+++ b/res/layout/grd_item_contact.xml
@@ -24,27 +24,27 @@
             android:layout_gravity="left|top"
             android:background="@color/transparent"
             android:orientation="vertical"
-            android:paddingBottom="40dp"
-            >
+            android:paddingBottom="25dp"
+             >
 
             <ImageView
                 android:id="@+id/grid_item_call"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:layout_gravity="left|center|fill_vertical"
                 android:layout_marginRight="3dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
                 android:src="@drawable/btn_ic_call_selector" />
 
             <ImageView
                 android:id="@+id/grid_item_message"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:layout_gravity="left|center|fill_vertical"
                 android:layout_marginRight="2dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="48dp"
+                android:layout_weight="1"
                 android:src="@drawable/zname_ic_message" />
         </LinearLayout>
     </FrameLayout>
